# chess

./: CMakeLists.txt  build-debug.sh  build-release.sh  linux-toolchain.cmake  macos-toolchain.cmake  toolchain.cmake
chess/: CMakeLists.txt  bishop.cc  bishop.h  board.cc  board.h  bpawn.cc  bpawn.h  checkmate.cc  dfs.cc  king.cc  king.h  knight.cc  knight.h  move.cc  move.h  one_round.cc  one_round.h  piece.cc  piece.h  piece_bank.cc  piece_bank.h  queen.cc  queen.h  rook.cc  rook.h  solution_cache.cc  solution_cache.h  static_forest.h  util.h  wpawn.cc  wpawn.h
chess/test_data/: 1072014-mate-in4-white.board  1092014-mate-in-5.board  1162014-mate-in-4-white.board  1162014-white-mate-in-4.board  46_white_in2.board  47_black_in2.board  48_black_in2.board  49_white_in2.board  50_white_in2.board  51_black_in2.board  52_black_in2.board  53_black_in2.board  54_black_in2.board  55-white-in-2.board  56-white-in-2.board  57-white-in-2.board  58-black-in-2.board  59-white-in-2.board  60-white-in-2.board  61-white-in-2.board  62-white-in-2.board  63-white-in-2.board  64-w2.board  65-w2.board  66-b2.board  67-b2.board  68-b2.board  69-b2.board  70-b2.board  71-w2.board  72-w2.board  73-b2.board  74-w2.board  75-w2.board  76-w2.board  77-b2.board  78-w2.board  79-w2.board  80-b2.board  81-w2.board  (+63 more)
chess/tests/: CMakeLists.txt  bishop_test.cc  board_test.cc  bpawn_test.cc  king_test.cc  knight_test.cc  matein2_test.cc  one_round_test.cc  piece_test.cc  queen_test.cc  rook_test.cc  test_main.cc  util.cc  util.h  wpawn_test.cc
env/: .bash_profile  .bashrc  .gitconfig  .tmux.conf
env/.bash/: bashrc
folly/: CMakeLists.txt  Makefile  Makefile.in  _configs.sed  aclocal.m4  config.h  config.h.in  config.status  configure  folly-config.h  libtool
folly/autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
folly/test/: Makefile  Makefile.in
folly/test/function_benchmark/: Makefile  Makefile.in
test/: CMakeLists.txt  hello.cc
